Import Eclipse collections library. Start using these collections in a few places where they make sense. Functional test failure to do with allele frequencies addressed in following commit.